--- a/blog.html
+++ b/blog.html
@@ -24,21 +24,21 @@
       
       <!-- Blog Card 1 -->
       <article class="blog-card">
-        <img src="img1.jpg" alt="Blog 1">
+        <img src="Images/img1.jpg" alt="Blog 1">
         <h2>Blog 1</p>
         <a href="blog-post1.html" class="read-more">Read More</a>
       </article>
 
       <!-- Blog Card 2 -->
       <article class="blog-card">
-        <img src="bg.jpg" alt="Blog 2">
+        <img src="Images/img2.jpg" alt="Blog 2">
         <h2>Blog 2</p>
         <a href="blog-post2.html" class="read-more">Read More</a>
       </article>
 
       <!-- Blog Card 3 -->
       <article class="blog-card">
-        <img src="img4.jpg" alt="Blog 3">
+        <img src="Images/img3.jpg" alt="Blog 3">
         <h2>Blog 3</p>
         <a href="blog-post3.html" class="read-more">Read More</a>
       </article>
