--- a/home.html
+++ b/home.html
@@ -32,19 +32,19 @@
     <h2>Recent Updates</h2>
     <div class="scroll-box">
       <div class="update">
-        <img src="img4.jpg" alt="Update">
+        <img src="Images/img4.jpg" alt="Update">
         <p>Description of update 1...</p>
       </div>
       <div class="update">
-        <img src="img4.jpg" alt="Update">
+        <img src="Images/img4.jpg" alt="Update">
         <p>Description of update 2...</p>
       </div>
       <div class="update">
-        <img src="img4.jpg" alt="Update">
+        <img src="Images/img4.jpg" alt="Update">
         <p>Description of update 3...</p>
       </div>
       <div class="update">
-        <img src="img4.jpg" alt="Update">
+        <img src="Images/img4.jpg" alt="Update">
         <p>Description of update 4...</p>
       </div>
     </div>
