--- a/about.html
+++ b/about.html
@@ -1,28 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - EduPortal</title>
-    <link rel="stylesheet" href="about.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us - EduPortal</title>
+  <link rel="stylesheet" href="about.css">
 </head>
 <body>
-    <header>
-        <div class="logo">EduPortal</div>
-        <nav>
-            <a href="home.html">Home</a>
-            <a href="blog.html">Blogs</a>
-            <a href="about.html" class="active">About</a>
-        </nav>
-    </header>
+  <!-- Header -->
+  <header>
+    <div class="logo">EduPortal</div>
+    <nav>
+      <a href="home.html">Home</a>
+      <a href="blog.html">Blogs</a>
+      <a href="about.html" class="active">About</a>
+    </nav>
+  </header>
 
-    <section class="about">
-        <h1>About Us</h1>
-        <p>Welcome to EduPortal, your go-to platform for all educational resources.</p>
-    </section>
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>About EduPortal</h1>
+  </section>
 
-    <footer>
-        <p>Contact Us: idontknow@gmail.com | +91 9999xxxxxx</p>
-    </footer>
+  <!-- About Section -->
+  <section class="about">
+    <div class="profile">
+      <img src="Images/teacher.jpeg" alt="Professor Photo">
+      <div class="bio">
+        <h2>Prof. PRINCYYYY</h2>
+        <p>
+          Welcome to <strong>EduPortal</strong>, a platform built to share knowledge,
+          ideas, and insights with students, researchers, and educators.  
+          I am passionate about teaching, technology, and innovation in computer
+          science education. This portal reflects my journey and vision to
+          empower learners with the right resources and opportunities.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Mission / Vision -->
+  <section class="cards">
+  <div class="card">
+    <h3>🎯 Mission</h3>
+    <p>
+      To provide a modern, accessible, and engaging platform that fosters
+      learning and collaboration among students and educators.
+    </p>
+  </div>
+  <div class="card">
+    <h3>🌍 Vision</h3>
+    <p>
+      To create a hub of academic excellence where knowledge meets innovation,
+      preparing students for a better future in technology.
+    </p>
+  </div>
+  <div class="card">
+    <h3>📚 Values</h3>
+    <p>
+      Integrity, inclusivity, curiosity, and a lifelong commitment to learning.
+    </p>
+  </div>
+</section>
+
+  <!-- Footer -->
+  <footer>
+    <p>Contact Us: idontknow@gmail.com | +91 9999xxxxxx</p>
+  </footer>
 </body>
 </html>
