--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <div class="profile">
       <img src="Images/teacher.jpeg" alt="Professor Photo">
       <div class="bio">
-        <h2>Prof. PRINCYYYY</h2>
+        <h2>Prof. Ankur Mondal</h2>
         <p>
           Welcome to <strong>EduPortal</strong>, a platform built to share knowledge,
           ideas, and insights with students, researchers, and educators.  
