--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     <nav>
       
 
-    <a href="index.html" class="active">Home</a>
+    <a href="home.html" class="active">Home</a>
     <a href="blog.html">Blogs</a>
     <a href="about.html">About</a>
     <a href="login.html"><button class="login">Login</button></a>
